--- a/src/assets/styles/base/normalize.scss
+++ b/src/assets/styles/base/normalize.scss
@@ -1,14 +1,9 @@
 * {
-  font-family: "Muli", sans-serif;
+  font-family: 'Muli', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 100%;
   outline: none;
-}
-
-a {
-  text-decoration: none;
-  color: black;
 }
 
 ul {
@@ -23,19 +18,19 @@ img {
   max-width: 340px;
   margin: auto;
 
-  @include mq("tablet") {
+  @include mq('tablet') {
     max-width: 720px;
   }
 
-  @include mq("tablet-wide") {
+  @include mq('tablet-wide') {
     max-width: 970px;
   }
 
-  @include mq("desktop") {
+  @include mq('desktop') {
     max-width: 1300px;
   }
 
-  @include mq("desktop-wide") {
+  @include mq('desktop-wide') {
     max-width: 1600px;
   }
 }
