--- a/src/assets/styles/templates/_login.scss
+++ b/src/assets/styles/templates/_login.scss
@@ -1,4 +1,5 @@
 .login {
+  display: flex;
   width: 100%;
 
   &-carousel {
@@ -29,6 +30,52 @@
         img {
           max-width: 80%;
         }
+      }
+    }
+  }
+
+  &-form {
+    width: 50%;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &-title {
+      color: #707070;
+      // font-size: 30px;
+    }
+
+    &-inputsForm {
+      width: 50%;
+    }
+
+    &-forgotPass {
+      color: #707070 !important;
+      font-size: 9px !important;
+      width: 100%;
+      text-align: right;
+    }
+
+    &-signinBtn {
+      width: 175px;
+      height: 45px;
+      color: #ffffff;
+      background: #707070 0% 0% no-repeat padding-box;
+      border-radius: 100px;
+      opacity: 1;
+      border: none;
+    }
+
+    &-newAccount {
+      color: #707070;
+      text-align: center;
+
+      a {
+        text-decoration: underline !important;
+        color: #a9c5ba !important;
       }
     }
   }
